sourceforge (2.6-0+0+) unstable; urgency=low

  * Started working on 2.6.  Don't expect it to work just yet.
  * Split the DB installation/deinstallation process out of
    postinst/postrm/prerm and into an install-db.sh script.

 -- Roland Mas <lolando@debian.org>  Fri,  2 Nov 2001 18:08:28 +0100

sourceforge (2.5-12) unstable; urgency=low

  * Fixed a PATH problem in install-ldap.sh.
  * Made the cronjobs silent.

 -- Roland Mas <lolando@debian.org>  Thu,  1 Nov 2001 20:03:28 +0100

sourceforge (2.5-11) unstable; urgency=low

  * Fixed /etc/aliases entry for sourceforge user.  Really, this time.
  * Fixed Trove software map (closes: #108297).
  * Added sf-add-skill and sf-register-theme scripts.
  * Removed the need for chsh sourceforge in update-user-group-cvs.sh.
  * Fixed user list and group list.
  * [Christian] Added support for sites without DNS delegation.
  * Included patch from Olivier Garcia <olivier@linux-nerd.com>: support
    for multiple network cards.
  * Made sourceforge.config ash-compatible.
  * Fixed User.class (closes: #108682).
  * Added the alias for the Mailman images in sf-httpd.conf.template.
  * Fixed the most important entry in the zone file (ours).
  * Email forwarding should now work (through LDAP).  I'm afraid this has
    required that we depend on exim specifically (instead of any other
    MTA).  If you desperately need support for another MTA, please read
    (and understand) deb-specific/install-exim.sh and send me the
    appropriate install-<your-MTA-here>.sh for inclusion.
  * Fixed fill-in-the-blanks.pl to allow multiple replacements of the same
    token on the same line.  That was needed by some magic that's not here
    anymore, but it's better nevertheless.
  * [Christian] Added SF_robot and Replicator entry in sql2ldif script.
  * [Christian] Made ldap_add_password template var work.
  * Mailing-lists should now work.  The emails should also be sent to the