@@ -49,42 +49,11 @@ case "$1" in
 	chmod 640 /etc/sourceforge/local.pl
 	# chmod 644 /etc/sourceforge/exim.directors
     	
+        # Setup our DB
 	/usr/lib/sourceforge/bin/install-db.sh configure
 	
-	# Make sure Apache sees us
-	perl -pi -e "s/# *LoadModule php4_module/LoadModule php4_module/gi" /etc/apache/httpd.conf
-	perl -pi -e "s/# *LoadModule ssl_module/LoadModule ssl_module/gi" /etc/apache/httpd.conf
-	perl -pi -e "s/# *LoadModule apache_ssl_module/LoadModule apache_ssl_module/gi" /etc/apache/httpd.conf
-	perl -pi -e "s/# *LoadModule env_module/LoadModule env_module/gi" /etc/apache/httpd.conf
-	perl -pi -e "s/# *LoadModule vhost_alias_module/LoadModule vhost_alias_module/gi" /etc/apache/httpd.conf
-	
-	if ! grep -q "^Include /etc/sourceforge/sf-httpd.conf" /etc/apache/httpd.conf ; then
-	    echo "### Next line inserted by Sourceforge install" >> /etc/apache/httpd.conf
-	    echo "Include /etc/sourceforge/sf-httpd.conf" >> /etc/apache/httpd.conf
-	fi
-	
-	# Make sure pgsql,ldap and gd are enabled in the PHP config files
-	if [ -f /etc/php4/apache/php.ini ]; then
-	    if ! grep -q "^[[:space:]]*extension[[:space:]]*=[[:space:]]*pgsql.so" /etc/php4/apache/php.ini; then
-		echo "Enabling pgsql in /etc/php4/apache/php.ini"
-		echo "extension=pgsql.so" >> /etc/php4/apache/php.ini
-	    fi
-	    if ! grep -q "^[[:space:]]*extension[[:space:]]*=[[:space:]]*gd.so" /etc/php4/apache/php.ini; then
-		echo "Enabling gd in /etc/php4/apache/php.ini"
-		echo "extension=gd.so" >> /etc/php4/apache/php.ini
-	    fi
-	    if ! grep -q "^[[:space:]]*extension[[:space:]]*=[[:space:]]*ldap.so" /etc/php4/apache/php.ini; then
-		echo "Enabling ldap in /etc/php4/apache/php.ini"
-		echo "extension=ldap.so" >> /etc/php4/apache/php.ini
-	    fi
-	fi
-	if [ -f /etc/php4/cgi/php.ini ]; then
-	    if ! grep -q "^[[:space:]]*extension[[:space:]]*=[[:space:]]*pgsql.so" /etc/php4/cgi/php.ini; then
-		echo "Enabling pgsql in /etc/php4/cgi/php.ini"
-		echo "extension=pgsql.so" >> /etc/php4/cgi/php.ini
-	    fi
-	fi
-
+        # Setup our Apache
+	/usr/lib/sourceforge/bin/install-apache.sh configure
 
 	# Redirect "noreply" mail to the bit bucket
 	db_get sourceforge/noreply_to_bitbucket
@@ -128,7 +97,7 @@ case "$1" in
 	/usr/lib/sourceforge/bin/install-ssh.sh
 
         # Setup our mail forwarding
-	/usr/lib/sourceforge/bin/install-exim.sh configure # Not ready yet
+	/usr/lib/sourceforge/bin/install-exim.sh configure
 
         # Setup our FTP
 	/usr/lib/sourceforge/bin/install-ftp.sh configure 
